# NeuroCareer-AI

./: .env.example  .gitignore  FEATURES.md  README.md  SETUP.md  migration.sql
backend/: .env.example  README.md  add_resume_analyses_table.sql  alembic.ini  migrate.py  migrate_users_table.sql  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  career_agent.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: __init__.py  agent.py  applications.py  auth.py  health.py  memory.py  resume.py  settings.py  skills.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  hindsight_client.py  memory.py  radar.py  reflection.py
backend/neurocareer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  auth.config.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ai-chat-console.tsx  application-tracker-interactive.tsx  application-tracker.tsx  auth-button.tsx  auth-page.tsx  career-opportunity-radar.tsx  clear-memory-button.tsx  dashboard-sidebar.tsx  ghosting-analyst.tsx  job-readiness-gauge.tsx  logout-button.tsx  memory-controls.tsx  metric-badges.tsx  mock-interview-console.tsx  providers.tsx  reflection-feed.tsx  reflection-panel.tsx  resume-upload-card.tsx  skill-evolution-tree.tsx  skill-tree.tsx
frontend/lib/: api-client.ts  auth-utils.ts  auth.ts  (+1 more)
(+2 files in other folders)
